--- a/.gitignore
+++ b/.gitignore
@@ -112,4 +112,6 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+# db.properties
+db.properties
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,eclipse
