--- a/worksB/pom.xml
+++ b/worksB/pom.xml
@@ -225,6 +225,12 @@
 			<version>1.9.3</version>
 		</dependency>
 
+		<!-- sha256 복호화 -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
