--- a/worksB/src/main/webapp/META-INF/maven/com.worksb/hi/pom.xml
+++ b/worksB/src/main/webapp/META-INF/maven/com.worksb/hi/pom.xml
@@ -225,6 +225,26 @@
 			<version>1.9.3</version>
 		</dependency>
 
+		<!-- sha256 복호화 -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.15</version>
+		</dependency>
+
+		<!-- mail library -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+	
+		<!-- mail 서포트 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
