--- a/worksB/src/main/webapp/WEB-INF/web.xml
+++ b/worksB/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,12 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
+	<!-- Spring Security -->
+	<listener>
+	    <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
+	
 	<!-- security filter -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
