파일다운로드끙...ㅎ

--- a/worksB/src/main/resources/config/app.properties
+++ b/worksB/src/main/resources/config/app.properties
@@ -3,3 +3,6 @@ file.upload.path=c:\\upload
 
 ## file load(select) -> xml file
 file.loading.path=file:///c://upload/
+
+##filedownload
+file.download.path=c://upload/
