--- a/worksB/src/main/webapp/WEB-INF/web.xml
+++ b/worksB/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,10 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	<listener>
+		<listener-class>com.worksb.hi.common.CustomSessionHandler</listener-class>
+	</listener>
+	
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
