0910 자잘한 기능 수정

--- a/worksB/src/main/resources/config/app.properties
+++ b/worksB/src/main/resources/config/app.properties
@@ -1,8 +1,22 @@
 ## file upload -> Java Source
-file.upload.path=c:\\upload
+##file.upload.path=c:\\upload
 
 ## file load(select) -> xml file
-file.loading.path=file:///c://upload/
+##file.loading.path=file:///c://upload/
 
 ##filedownload
-file.download.path=c://upload/
+##file.download.path=c://upload/
+
+
+
+
+##for_linux
+
+file.upload.path=/upload
+file.loading.path=file:///upload/
+file.download.path=/upload/
+
+
+# uploadsize
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
